data/derived/comb/progs/unify/prog5625.ml.out
Characters 161-162:
  |false -> h::seen in
            ^
Error: This expression has type 'a list list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list list
